# uncoolc

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
include/: ast.h  constant_eval.h  error.h  hlir.h  hlir_optimizer.h  lifetime.h  optimizer_config.h  parser.h  printer.h  runtime.h  semantic.h  symbol.h  token.h  tokenizer.h
src/: ast.cc  classtree.cc  constant_eval.cc  error.cc  generate_hlir.cc  hlir.cc  hlir_from_ast.cc  hlir_optimizer.cc  main.cc  parser.cc  printer.cc  runtime.cc  semantic.cc  symbol.cc  token.cc  token_type.cc  tokenizer.cc  tokenizer.h  typecheck.cc
test/: classes_no_expressions.cool  minimal.cool  simple.cool  test_symbol.cc  test_symbol.cpp  test_token.cc  test_tokenizer.cc
